--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -13,4 +13,6 @@
   <textarea name="markdown" id="markdown" class="form-control"></textarea>
 </div>
 
-<button type="submit" class="btn btn-primary mt-3">Save</button>
+<a href="/" class="btn btn-secondary">Cancel</a>
+
+<button type="submit" class="btn btn-primary">Save</button>
