--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,16 +1,16 @@
 <div class="form-group mb-3">
   <label for="title">Title</label>
-  <input type="text" name="title" id="title" class="form-control" required>
+  <input type="text" name="title" id="title" class="form-control" value="<%= article.title %>" required>
 </div>
 
 <div class="form-group mb-3">
   <label for="description">Description</label>
-  <textarea name="description" id="description" class="form-control"></textarea>
+  <textarea name="description" id="description" class="form-control" ><%= article.description %></textarea>
 </div>
 
 <div class="form-group mb-3">
   <label for="markdown">Markdown</label>
-  <textarea name="markdown" id="markdown" class="form-control"></textarea>
+  <textarea required name="markdown" id="markdown" class="form-control" ><%= article.markdown %></textarea>
 </div>
 
 <a href="/" class="btn btn-secondary">Cancel</a>
